<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/actorNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:text="Actor Name"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myToolbar" />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actorNameTxt">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:isScrollContainer="true"
            android:paddingStart="26dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:checkable="true"
                android:checked="true"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="@string/actress" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:checkable="true"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="@string/producer" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="@string/actress_herself" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmographyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>